docs(jdk-only): W7-56 — the ctor, the refuted mint, and what a table entry does not prove
Rewrites the record around what actually held the vector open, and corrects
two claims:

* The accessor retirement DID take. The census lists refusals and live
  shadows under different kinds and both are "violations":
  synthetic-native-registered (with registered_by) is the REFUSAL record
  pushed on register_inner's "Return WITHOUT inserting" path;
  native-shadows-bytecode (with native_kind) is a live dispatching shadow.
  Reading the first as "still live" inverts the result.
  CRATONVM_DBG_DROPPED_STUBS=1 says it outright.

* The class_manager.rs mint is NOT active. Printed, not inferred (SrcProbe5):
  under --jdk-only LogRecord reports 33 methods / 17 fields / 0 native /
  needToInferCaller PRESENT / inferCaller DECLARED, byte-identical to
  HotSpot. The mint would be 24 methods, all NATIVE, no such field. Both of
  its call sites are class-FABRICATION paths, unreachable for a class the
  jimage declares.

Also records the durable lesson: an entry in RETIRED_SHADOW_TRIPLES is not
evidence a triple has no live native, because the retag only fires on Bridge
and a second Intrinsic registration of the same triple survives untouched.
getLevel/getMessage/getSequenceNumber are in that position right now.

Amends the LogRecord.<init> ordinal-0 kind-map row alongside the four
accessors; its ordinal-1 sibling has read synthetic-stub all along, and the
two rows disagreeing was the visible trace of the defect.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>